--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 
-.herospecial:before{
+.top:before{
     content: "";
     position: fixed;
     z-index:-99;
@@ -48,7 +48,7 @@ video#bgvid {
 	position: fixed; right: 0; bottom: 0;
 	min-width: 100%; min-height: 100%;
 	width: auto; height: auto; z-index: -100;
-	background: url(img/poster.jpg) no-repeat;
+	background: url(../img/poster.png) no-repeat;
 	background-size: cover; 
 	-webkit-filter: blur(5px);
     -moz-filter: blur(5px);
@@ -57,7 +57,7 @@ video#bgvid {
     -filter: blur(5px);
 	}
 
-.herospecial{
+.top{
 z-index: 0;
 position:relative;
 }
@@ -73,8 +73,8 @@ position:relative;
 	
 }
 @font-face {
-    font-family: AsapRegular;
-    src: url(fonts/AsapRegular.otf);
+    font-family: FiraSansOT;
+    src: url(fonts/FiraSansOTRegular.otf);
 }
 @font-face {
     font-family: Maven3;
@@ -147,6 +147,9 @@ h4{
 	text-align: center;
 	padding-top: 50px;
 
+}
+#FiraSansOT {
+	font-family: FiraSansOT;
 }
 #roboto {
 	font-family: AsapRegular;
