--- a/css/app.css
+++ b/css/app.css
@@ -8,12 +8,24 @@
     left:0;
     right:0;
     padding-bottom:35%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.6);
 	background-size:cover;
 	display: block;
 	
-	
 	}
+.gradientfiller {
+    position: fixed;
+    z-index:-100;
+    width:100%;
+    height:100%;
+    left:0;
+    right:0;
+    padding-bottom:35%;
+    background-color: rgba(0,0,0,0.8);
+	background-size:cover;
+	display: block;
+	
+}
 .top-bar-button {
 	padding-left: 0;
 	padding-right: 0;
@@ -61,15 +73,15 @@ video#bgvid {
 z-index: 0;
 position:relative;
 }
-.hero-content{
+.content{
 	padding-top:40px;
 	padding-bottom:40px;
-	background-color: #EAEAEA;
+	background-color: white;
 	width: 100%;
-	z-index: 0;
-	position:relative;
+	z-index: 9999;
 	top:50px;
 	bottom:50px;
+	position:relative;
 	
 }
 @font-face {
