--- a/css/app.css
+++ b/css/app.css
@@ -166,8 +166,8 @@ h4{
 #FiraSansOT {
 	font-family: FiraSansOT;
 }
-#roboto {
-	font-family: AsapRegular;
+#maven {
+	font-family: Maven2;
 	font-size:20px;
 }
 .pink {
@@ -206,6 +206,20 @@ h4{
 	font-weight:900;
 	z-index:1;
 	position:relative;
+}
+.scrolldown {
+	border:2px solid white;
+	text-transform: uppercase;
+	display:table;
+	padding: 5px;
+	margin: 50px auto 0;
+	font-family: Maven2;
+}
+.arrow {
+	align: centered;
+	display:table;
+	padding: 5px;
+	margin: 10px auto 0;
 }
 #tutoring {
 	font-size: 96px;
