--- a/css/app.css
+++ b/css/app.css
@@ -232,6 +232,16 @@ p {
 #map {
 	height:180px;
 }
+.toc {
+	height:50%;
+	width:50%;
+	background-color: green;
+}
+.tocbutton {
+	height:100%;
+	width:100%;
+	text-align: centered;
+}
 .black-box p{font-weight:900;}
 .secondary.small.button{background-color:transparent;color:#fff;border:2px #fff solid;border-radius:5px;padding:15px 50px 15px 50px;margin:0;}
 .secondary.small.button:hover{background-color:rgba(255,255,255,0.5);}
