--- a/css/app.css
+++ b/css/app.css
@@ -1,45 +1,41 @@
-
-.top:before{
+.top:before {
     content: "";
     position: fixed;
-    z-index:-99;
-    width:100%;
-    height:100%;
-    left:0;
-    right:0;
-    padding-bottom:35%;
-    background-color: rgba(0,0,0,0.6);
-	background-size:cover;
-	display: block;
-	
-	}
+    z-index: -99;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    padding-bottom: 35%;
+    background-color: rgba(0, 0, 0, 0.6);
+    background-size: cover;
+    display: block;
+}
 p {
-	font-family: Roboto;
+    font-family: Roboto;
 }
 .gradientfiller {
     position: fixed;
-    z-index:-100;
-    width:100%;
-    height:100%;
-    left:0;
-    right:0;
-    padding-bottom:35%;
-    background-color: rgba(0,0,0,0.8);
-	background-size:cover;
-	display: block;
-	
+    z-index: -100;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    padding-bottom: 35%;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-size: cover;
+    display: block;
 }
 .top-bar-button {
-	padding-left: 0;
-	padding-right: 0;
-	width: 23.85%;
-	text-align: center;
-
+    padding-left: 0;
+    padding-right: 0;
+    width: 23.85%;
+    text-align: center;
 }
 #button-text {
-	font-size: 21px;
-	font-family: Maven2;
-	letter-spacing: 2px;
+    font-size: 21px;
+    font-family: Maven2;
+    letter-spacing: 2px;
 }
 .top-bar .toggle-topbar.menu-icon a:after {
     box-shadow: 0 10px 0 1px #FFFFFF, 0 16px 0 1px #FFFFFF, 0 22px 0 1px #FFFFFF;
@@ -58,34 +54,36 @@ p {
     padding: 0 25px 0 0;
     position: relative;
 }
-
 video#bgvid {
-	position: fixed; right: 0; bottom: 0;
-	min-width: 100%; min-height: 100%;
-	width: auto; height: auto; z-index: -100;
-	background: url(../img/poster.png) no-repeat;
-	background-size: cover; 
-	-webkit-filter: blur(5px);
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background: url(../img/poster.png) no-repeat;
+    background-size: cover;
+    -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
     -o-filter: blur(5px);
     -ms-filter: blur(5px);
     -filter: blur(5px);
-	}
-
-.top{
-z-index: 0;
-position:relative;
 }
-.content{
-	padding-top:40px;
-	padding-bottom:40px;
-	background-color: white;
-	width: 100%;
-	z-index: 9999;
-	top:50px;
-	bottom:50px;
-	position:relative;
-	
+.top {
+    z-index: 0;
+    position: relative;
+}
+.content {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: white;
+    width: 100%;
+    z-index: 9999;
+    top: 50px;
+    bottom: 50px;
+    position: relative;
 }
 @font-face {
     font-family: FiraSansOT;
@@ -119,138 +117,168 @@ position:relative;
     font-family: AsapRegular;
     src: url(fonts/AsapRegular.otf);
 }
-h1{
-	font-family: KlinicSlabMedium;
-	font-size:40px;
-	color:#fff;
-	line-height:28px;
-	margin-top:16px;
-	margin-bottom:15px;
-	text-align:center;
-	}
-h2{
-	font-family:KlinicSlabMedium;
-	color:#fff;
-	font-size:40px;
-	line-height:34px;
-	}
-h3{
-	font-family:KlinicSlabLight;
-	font-size:24px;color:#fff;
-	line-height:10px;
-	text-align:center;
-	font-weight:500;
-	padding-bottom:10px;
-	}
-.i{
-	font-family:KlinicSlabMedium;
-	font-size:24px;color:#fff;
-	line-height:10px;
-	text-align:center;
-	font-weight:500;
-	padding-bottom:10px;
-	}
-h4{
-	font-family:KlinicSlabMedium;
-	color:#000;
-	font-size:28px;
-	padding-top:5px;
+h1 {
+    font-family: KlinicSlabMedium;
+    font-size: 40px;
+    color: #fff;
+    line-height: 28px;
+    margin-top: 16px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+h2 {
+    font-family: KlinicSlabMedium;
+    color: #fff;
+    font-size: 40px;
+    line-height: 34px;
+}
+h3 {
+    font-family: KlinicSlabLight;
+    font-size: 24px;
+    color: #fff;
+    line-height: 10px;
+    text-align: center;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
+.i {
+    font-family: KlinicSlabMedium;
+    font-size: 24px;
+    color: #fff;
+    line-height: 10px;
+    text-align: center;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
+h4 {
+    font-family: KlinicSlabMedium;
+    color: #000;
+    font-size: 28px;
+    padding-top: 5px;
 }
 .img {
-	right:0;
-	left:0;
-	text-align: center;
-	padding-top: 50px;
-
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding-top: 50px;
 }
 #FiraSansOT {
-	font-family: FiraSansOT;
+    font-family: FiraSansOT;
 }
 #maven {
-	font-family: Maven2;
-	font-size:20px;
+    font-family: Maven2;
+    font-size: 20px;
 }
 .pink {
-	color:#2574A9;
-	/*#F94B4A;*/
+    color: #2574A9;
+    /*#F94B4A;*/
 }
 #KlinicSlabMedium {
-	font-family: KlinicSlabMedium;
-	font-size: 22px;
+    font-family: KlinicSlabMedium;
+    font-size: 22px;
 }
 #KlinicSlabLight {
-	font-family: KlinicSlabLight;
+    font-family: KlinicSlabLight;
 }
 .about-us {
-	z-index:1;
+    z-index: 1;
 }
 p {
-	font-size:18px;
-	text-align: center;
-	color:black;
-	font-weight:light;
+    font-size: 18px;
+    text-align: center;
+    color: black;
+    font-weight: light;
 }
-.columns.large-centered{
-	padding-left:5px;
-	padding-right:5px;
-	}
-@media only screen and (max-width: 40em) {.columns.large-centered{
-	font-size:13px;
+.columns.large-centered {
+    padding-left: 5px;
+    padding-right: 5px;
 }
-	}
-@media only screen and (min-width: 40.063em) {.columns.large-centered{
-	font-size:14px;
-	z-index:999999;
-	}}
-.about-box{
-	color:#fff;
+@media only screen and (max-width: 40em) {
+    .columns.large-centered {
+        font-size: 13px;
+    }
 }
-.black-box{
-	background-color:rgba(0,0,0,0.55);
-	padding:35px;
-	font-weight:900;
-	z-index:1;
-	position:relative;
+@media only screen and (min-width: 40.063em) {
+    .columns.large-centered {
+        font-size: 14px;
+        z-index: 999999;
+    }
+}
+.about-box {
+    color: #fff;
+}
+.black-box {
+    background-color: rgba(0, 0, 0, 0.55);
+    padding: 35px;
+    font-weight: 900;
+    z-index: 1;
+    position: relative;
 }
 .scrolldown {
-	border:2px solid white;
-	text-transform: uppercase;
-	display:table;
-	padding: 5px;
-	margin: 50px auto 0;
-	font-family: Maven2;
+    border: 2px solid white;
+    text-transform: uppercase;
+    display: table;
+    padding: 5px;
+    margin: 60px auto 0;
+    font-family: Maven2;
 }
 .arrow {
-	align: centered;
-	display:table;
-	padding: 5px;
-	margin: 10px auto 0;
+    align: centered;
+    display: table;
+    padding: 5px;
+    margin: 10px auto 0;
 }
 #tutoring {
-	font-size: 96px;
+    font-size: 96px;
 }
 #map {
-	height:180px;
+    height: 180px;
 }
 .toc {
-	height:50%;
-	width:50%;
-	background-color: green;
+    height: 50%;
+    width: 50%;
+    background-color: green;
 }
 .tocbutton {
-	height:100%;
-	width:100%;
-	text-align: centered;
+    height: 100%;
+    width: 100%;
+    text-align: centered;
 }
-.black-box p{font-weight:900;}
-.secondary.small.button{background-color:transparent;color:#fff;border:2px #fff solid;border-radius:5px;padding:15px 50px 15px 50px;margin:0;}
-.secondary.small.button:hover{background-color:rgba(255,255,255,0.5);}
-.row .main-wrapper{color:#fff;}
-.about-content{background-color:#fff;box-shadow:2px 2px 10px rgba(0,0,0,0.1);}
-.button-group li .button{border:0!important;}
-.button{-webkit-appearance:none;background-color:transparent;border-width:0;text-align:center;box-shadow:0 0 0;}
-.button:hover{color:rgba(255,255,255,0.7);background-color:transparent;}footer p,footer a{font-size:14px;}
-
-
-
-
+.black-box p {
+    font-weight: 900;
+}
+.secondary.small.button {
+    background-color: transparent;
+    color: #fff;
+    border: 2px #fff solid;
+    border-radius: 5px;
+    padding: 15px 50px 15px 50px;
+    margin: 0;
+}
+.secondary.small.button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.row .main-wrapper {
+    color: #fff;
+}
+.about-content {
+    background-color: #fff;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+.button-group li .button {
+    border: 0!important;
+}
+.button {
+    -webkit-appearance: none;
+    background-color: transparent;
+    border-width: 0;
+    text-align: center;
+    box-shadow: 0 0 0;
+}
+.button:hover {
+    color: rgba(255, 255, 255, 0.7);
+    background-color: transparent;
+}
+footer p, footer a {
+    font-size: 14px;
+}
