--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 
-.top:before{
+.herospecial:before{
     content: "";
     position: fixed;
     z-index:-99;
@@ -8,27 +8,12 @@
     left:0;
     right:0;
     padding-bottom:35%;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.5);
 	background-size:cover;
 	display: block;
+	
 	
 	}
-p {
-	font-family: Roboto;
-}
-.gradientfiller {
-    position: fixed;
-    z-index:-100;
-    width:100%;
-    height:100%;
-    left:0;
-    right:0;
-    padding-bottom:35%;
-    background-color: rgba(0,0,0,0.8);
-	background-size:cover;
-	display: block;
-	
-}
 .top-bar-button {
 	padding-left: 0;
 	padding-right: 0;
@@ -63,7 +48,7 @@ video#bgvid {
 	position: fixed; right: 0; bottom: 0;
 	min-width: 100%; min-height: 100%;
 	width: auto; height: auto; z-index: -100;
-	background: url(../img/poster.png) no-repeat;
+	background: url(img/poster.jpg) no-repeat;
 	background-size: cover; 
 	-webkit-filter: blur(5px);
     -moz-filter: blur(5px);
@@ -72,24 +57,24 @@ video#bgvid {
     -filter: blur(5px);
 	}
 
-.top{
+.herospecial{
 z-index: 0;
 position:relative;
 }
-.content{
+.hero-content{
 	padding-top:40px;
 	padding-bottom:40px;
-	background-color: white;
+	background-color: #EAEAEA;
 	width: 100%;
-	z-index: 9999;
+	z-index: 0;
+	position:relative;
 	top:50px;
 	bottom:50px;
-	position:relative;
 	
 }
 @font-face {
-    font-family: FiraSansOT;
-    src: url(fonts/FiraSansOTRegular.otf);
+    font-family: AsapRegular;
+    src: url(fonts/AsapRegular.otf);
 }
 @font-face {
     font-family: Maven3;
@@ -163,11 +148,8 @@ h4{
 	padding-top: 50px;
 
 }
-#FiraSansOT {
-	font-family: FiraSansOT;
-}
-#maven {
-	font-family: Maven2;
+#roboto {
+	font-family: AsapRegular;
 	font-size:20px;
 }
 .pink {
@@ -184,12 +166,7 @@ h4{
 .about-us {
 	z-index:1;
 }
-p {
-	font-size:18px;
-	text-align: center;
-	color:black;
-	font-weight:light;
-}
+
 .columns.large-centered{
 	padding-left:5px;
 	padding-right:5px;
@@ -211,36 +188,6 @@ p {
 	font-weight:900;
 	z-index:1;
 	position:relative;
-}
-.scrolldown {
-	border:2px solid white;
-	text-transform: uppercase;
-	display:table;
-	padding: 5px;
-	margin: 50px auto 0;
-	font-family: Maven2;
-}
-.arrow {
-	align: centered;
-	display:table;
-	padding: 5px;
-	margin: 10px auto 0;
-}
-#tutoring {
-	font-size: 96px;
-}
-#map {
-	height:180px;
-}
-.toc {
-	height:50%;
-	width:50%;
-	background-color: green;
-}
-.tocbutton {
-	height:100%;
-	width:100%;
-	text-align: centered;
 }
 .black-box p{font-weight:900;}
 .secondary.small.button{background-color:transparent;color:#fff;border:2px #fff solid;border-radius:5px;padding:15px 50px 15px 50px;margin:0;}
